feat: add snow article

--- a/source/_posts/前端面试题.md
+++ b/source/_posts/前端面试题.md
@@ -29,7 +29,7 @@ top: 1
 4. 提高沟通能力，团队协作，发现问题，解决问题，总结问题能力
 5. 写写博客，输出就是最好的学习
 6. 提升个人前端的工作效率和工作质量
-7. 关注前端前言技术和发展方向，通过新技术服务团队和业务
+7. 关注前端前沿技术和发展方向，通过新技术服务团队和业务
 8. 一专多长
 <!-- more -->
 
@@ -50,13 +50,10 @@ top: 1
 
 ### 最后你有什么要问我的吗
 
-1.可以问一下公司具体的情况，比如我即将加入的部门的主要业务
-
-2.问一下具体工作情况，比如需要做哪些内容
-
-3.公司的氛围和公司的文化
-
-4.贵司对这项职务的工作内容和期望目标
+1. 可以问一下公司具体的情况，比如我即将加入的部门的主要业务
+2. 问一下具体工作情况，比如需要做哪些内容
+3. 公司的氛围和公司的文化
+4. 贵司对这项职务的工作内容和期望目标
 
 ### 性能优化
 
@@ -71,16 +68,16 @@ https://csspod.com/frontend-performance-best-practices/
 ### 单页面应用的优缺点
 
 优点：
-1.用户体验好，快，内容的改变不需要重新加载整个页面
-2.基于上面一点，SPA相对服务器压力小
-3.没有页面切换，就没有白屏阻塞
+1. 用户体验好，快，内容的改变不需要重新加载整个页面
+2. 基于上面一点，SPA相对服务器压力小
+3. 没有页面切换，就没有白屏阻塞
 
 缺点：
-1、不利于SEO
-2、初次加载耗时增多
-3、导航不可用
-4、容易造成css命名冲突等
-5、页面复杂度提高很多，复杂逻辑难度成倍
+1. 不利于SEO
+2. 初次加载耗时增多
+3. 导航不可用
+4. 容易造成css命名冲突等
+5. 页面复杂度提高很多，复杂逻辑难度成倍
 
 为什么不利于SEO？
 
@@ -101,14 +98,14 @@ SPA简单流程
 
 包括 团队开发规范，模块化开发，组件化开发，组件仓库，性能优化，部署，测试，开发流程，开发工具，脚手架，git工作流，团队协作
 
-1.构建工具
-2.持续集成
-3.系统测试
-4.日志统计
-5.上线部署
-6.敏捷开发
-7.性能优化
-8.基础框架
+1. 构建工具
+2. 持续集成
+3. 系统测试
+4. 日志统计
+5. 上线部署
+6. 敏捷开发
+7. 性能优化
+8. 基础框架
 
 
 
@@ -195,7 +192,7 @@ module.exports = HelloWorldPlugin;
 ```
 #### webpack打包后文件体积过大怎么办？
 
-很多方法：异步加载模块（代码分割）；提取第三方库（使用cdn或者vender）；代码压缩；去除不必要的插件；去除devtool选项，dllplugin等等。
+很多方法：异步加载模块（代码分割）；提取第三方库（使用cdn或者vendor）；代码压缩；去除不必要的插件；去除devtool选项，dllplugin等等。
 
 ### 移动端问题
 
@@ -251,7 +248,7 @@ Vue 推荐的是使用 `webpack + vue-loader` 的单文件组件格式，即html
 
 - 可以通过函数式方法描述视图组件（好处：相同的输入会得到同样的渲染结果，不会有副作用；组件不会被实例化，整体渲染性能得到提升）
 - 集成虚拟DOM（性能好）
-- 单向数据流（好处是更容易追踪数据变化排查问题
+- 单向数据流（好处是更容易追踪数据变化排查问题）
 - 一切都是component：代码更加模块化，重用代码更容易，可维护性高
 - 大量拥抱 es6 新特性
 - jsx
@@ -404,7 +401,7 @@ const HOC = (WrappedComponent) =>
   }
 ```
 
-我们可以看见返回的组件确实都继承自WrappedComponent,那么所有的调用将是反向调用的(例如:super.render())，这也就是为什么叫做反向继承。
+我们可以看见返回的组件确实都继承自WrappedComponent，那么所有的调用将是反向调用的(例如:super.render())，这也就是为什么叫做反向继承。
 　　
 #### react事件和传统事件有什么区别吗
 
