feat: add binary search tree algorithm

--- a/source/_posts/动态连通性算法.md
+++ b/source/_posts/动态连通性算法.md
@@ -5,7 +5,7 @@ date: 2018-3-16 18:32:46
 comments: 
 fancybox: 
 categories:
-- 算法
+- 面试
 tags:
 - 数据结构
 - 算法
@@ -79,8 +79,16 @@ public class WeightedQuickUnionUF {
      */
     public int find(int p) {
         validate(p);
-        while (p != parent[p])
+        int tmp = p;
+        while(parent[tmp] != tmp){
+            tmp = parent[tmp];
+        }
+        // 在检查结点的同时将他们直接链接到根结点
+        // 这就是带路径压缩的加权quick-union算法
+        while (p != parent[p]){
             p = parent[p];
+            parent[p] = tmp;
+        } 
         return p;
     }
 
