--- a/themes/yelee/languages/zh-Hans.yml
+++ b/themes/yelee/languages/zh-Hans.yml
@@ -36,6 +36,8 @@ tooltip:
   back2home: 回到主页
   nextPost: 下一篇
   prePost: 上一篇
+  prePage: 上一页
+  nextPage: 下一页
   miniArchives: 文章列表
   back2top: 返回顶部
   jump2comments: 查看评论
