feat: add red black tree algorithm

--- a/source/_posts/动态连通性算法.md
+++ b/source/_posts/动态连通性算法.md
@@ -19,10 +19,9 @@ permalink: 树java
         display: table;
         margin: 0 auto;
     }
-    img {
-        max-width: 100%;
+    .article-entry img {
         max-height: 250px;
-        padding-right: 60px;
+        padding-right: 20px;
     }
 </style>
 
