feat: add hash table

--- a/source/_posts/下雪特效.md
+++ b/source/_posts/下雪特效.md
@@ -13,7 +13,7 @@ tags:
 
 <!--more-->
 代码如下：
-```
+```javascript
 <script>
     // Cross-browser-compliant
     requestAnimationFrame = window.requestAnimationFrame ||
