feat: add computer network part 2

--- a/source/_posts/计算机网络读书笔记.md
+++ b/source/_posts/计算机网络读书笔记.md
@@ -14,51 +14,50 @@ permalink: 网络
 
 ## 概述
 ### 网络的网络
-![](/resource/f1fb826b-ecf4-4ddb-91f0-2bafecf08869.jpg)
+<div align="center"><img src="/resource/f1fb826b-ecf4-4ddb-91f0-2bafecf08869.jpg"/></div>
+
 >网络把主机连接起来，而互联网是把多种不同的网络连接起来，因此互联网是网络的网络。
 
 <!--more-->
 
-<style>
-  .article-entry>p {
-    display:table;
-    margin:0 auto;
-  }
-</style>
-
 ### ISP
-![](/resource/0f8c0a60-d4c6-47f4-978d-1a5c393fedac.jpg)
->- 互联网服务提供商ISP可以从互联网管理机构获得许多IP地址，同时拥有通信线路以及路由器等连网设备，个人或机构向ISP缴纳一定的费用就可以接入互联网。
+<div align="center"><img src="/resource/0f8c0a60-d4c6-47f4-978d-1a5c393fedac.jpg"/></div>
+
+- 互联网服务提供商ISP可以从互联网管理机构获得许多IP地址，同时拥有通信线路以及路由器等连网设备，个人或机构向ISP缴纳一定的费用就可以接入互联网。
 - 目前互联网是一种多层次结构，ISP根据覆盖面的大小分为主干ISP、地区ISP、本地ISP。
 - 互联网交换点IXP允许两个ISP直接相连而不用经过第三个ISP。
 
 
 
 ### 互联网的组成
-![](/resource/8ab40d6d-bd7c-47d3-afe8-6a8bc9f5d04c.jpg)
-> - 边缘部分：所有连接在互联网上的主机，用户可以直接使用。
+<div align="center"><img src="/resource/8ab40d6d-bd7c-47d3-afe8-6a8bc9f5d04c.jpg"/></div>
+
+- 边缘部分：所有连接在互联网上的主机，用户可以直接使用。
 - 核心部分：由大量的网络和连接这些的路由器组成，为边缘部分的主机提供服务。
 
 ### 主机之间的通信方式
-> - 客户-服务器（C/S）：客户是服务的请求方，服务器是服务的提供方。
+- 客户-服务器（C/S）：客户是服务的请求方，服务器是服务的提供方。
 - 对等（P2P）：不区分客户端和服务器。
 
 ### 电路交换与分组交换
-![](/resource/c50d230c-8b89-4644-8f62-8708d03aac5b.jpg)
-> - 电路交换
+<div align="center"><img src="/resource/c50d230c-8b89-4644-8f62-8708d03aac5b.jpg"/></div>
+
+- 电路交换
   电路交换用于电话通信系统，两个用户要通信之前需要建立一条专用的物理链路，并且在整个通信过程中始终占用该链路。由于通信的过程中不可能一直在使用传输线路，因此电路交换对线路的利用率很低，往往不到10%。
 - 报文交换
   报文交换用于邮局通信系统，邮局接收到一份报文之后，先存储下来，然后把相同目的地的报文一起转发到下一个目的地，这个过程就是存储转发过程。
 - 分组交换
   分组交换也使用了存储转发，但是转发的是分组不是报文。把整块数据称为一个报文，由于一个报文可能很长，需要先进行切分，来满足分组能处理的大小。在每个切分的数据前面加上首部之后就成为了分组，首部包含目的地址和源地址等控制信息。
-  ![](/resource/2366c2ad-5859-4d4e-805f-7e2b88061cd8.jpg)
+  <div align="center"><img src="/resource/2366c2ad-5859-4d4e-805f-7e2b88061cd8.jpg"/></div>
   存储转发允许在一条传输线路上传送多个主机的分组，因此两个用户之间的通信不需要占用端到端的线路资源。
   相比于报文交换，由于分组比报文更小，因此分组交换的存储转发速度更加快速。
 
 ### 时延
-> 总时延=发送时延+传播时延+处理时延+排队时延
-![](/resource/ceee91c2-da26-4169-94c3-e4608b46b9ac.png)
-> - 发送时延
+>总时延=发送时延+传播时延+处理时延+排队时延
+
+<div align="center"><img src="/resource/ceee91c2-da26-4169-94c3-e4608b46b9ac.png"/></div>
+
+- 发送时延
  主机或路由器发送数据帧所需要的时间。
  $$ delay=l(bit)/v(bit/s) $$
  其中l表示数据帧的长度，v表示发送帧率。
@@ -72,11 +71,11 @@ permalink: 网络
  分组在路由器的输入队列和输出队列中排队等待的时间，取决于网络当前的通信量。
 
 ### 计算机网络体系结构 *
-> 1. 七层协议
+1. 七层协议
  如图a所示，其中表示层和会话层用途如下：
  1. 表示层：信息的语法、语义以及它们的关联，如加密解密、转换翻译、压缩解压缩。
  1. 会话层：不同机器上的用户之间建立及管理会话。
-    ![](/resource/1005dc9d-9049-4b06-9524-6171e56ebd8c.png)
+    <div align="center"><img src="/resource/1005dc9d-9049-4b06-9524-6171e56ebd8c.png"/></div>
 1. 五层协议
  1. 应用层：为特定应用程序提供数据传输服务，例如HTTP、DNS等，数据单位为报文。
  1. 运输层：提供的是进程间的通用数据传输服务。由于应用层协议很多，定义通用的运输层协议机就可以支持不断增多的应用层协议。运输层包括两种协议：传输控制协议TCP，提供面向连接、可靠的数据传输服务，数据单位为报文段；用户数据包协议UDP，提供无连接、尽最大努力的数据传输服务，数据单位为用户数据报。TCP主要提供完整性服务，UDP主要提供及时性服务。
@@ -86,36 +85,41 @@ permalink: 网络
 1. 数据在各层之间的传递过程
  - 在向下的过程中，需要添加下层协议所需要的首部或者尾部，而在向上的过程中不断拆开首部和尾部。
  - 路由器只有下面三层协议，因为路由器位于网络核心中，不需要为进程或者应用程序提供服务，因此也就不需要运输层和应用层。
- ![](/resource/ac106e7e-489a-4082-abd9-dabebe48394c.jpg)
+ <div align="center"><img src="/resource/ac106e7e-489a-4082-abd9-dabebe48394c.jpg"/></div>
+
 1. TCP/IP体系结构
  - 它只有四层，相当于五层协议中数据链路层和物理层合并为网络接口层。
  - 现在的TCP/IP体系结构不严格遵循OSI分层概念，应用层可能会直接使用IP层或者网络接口层。
- ![](/resource/37b74a34-251c-45f8-88a4-614ec953f7e9.png)
+ <div align="center"><img src="/resource/37b74a34-251c-45f8-88a4-614ec953f7e9.png"/></div>
  - TCP/IP协议族是一种沙漏形状，中间小两边大，IP协议在其中占用举足轻重的地位。
- ![](/resource/93cbce0c-c37d-429c-815b-861976a46bd8.png)
+ <div align="center"><img src="/resource/93cbce0c-c37d-429c-815b-861976a46bd8.png"/></div>
 
 ## 物理层
 ### 通信方式
-> 1. 单向通信，又称为单工通信。
+1. 单向通信，又称为单工通信。
 1. 双向交替通信，又称为半双工通信。
 1. 双向同时通信，又称为全双工通信。
 
 ### 带通调制
-> 模拟信号是连续的信号，数字信号是离散的信号。带通调制把数字信号转换为模拟信号。
- ![](/resource/d2c55c84-aa1f-43c1-bd97-457bcb7816b3.png)
+>模拟信号是连续的信号，数字信号是离散的信号。带通调制把数字信号转换为模拟信号。
+
+ <div align="center"><img src="/resource/d2c55c84-aa1f-43c1-bd97-457bcb7816b3.png"/></div>
 
 ### 信道复用技术
-> 1. 频分复用、时分复用
+1. 频分复用、时分复用
  频分复用的所有用户在相同的时间占用不同频率带宽资源；时分复用的所有用户在不同的时间占用相同的频率带宽资源。
  使用这两种方式进行通信，在通信的过程中用户会一直占用一部分信道资源。但是由于计算机数据的突发性质，没必要一直用信道资源而不让出给其他用户使用，因此这两种方式对信道的利用率都不高。
- ![](/resource/543d47a1-f0dd-414f-b23c-0c142c814854.png)
->2. 统计时分复用
+ <div align="center"><img src="/resource/543d47a1-f0dd-414f-b23c-0c142c814854.png"/></div>
+
+1. 统计时分复用
  是对时分复用的一种改进，不固定每个用户在时分复用帧中的位置，只要有数据就集中起来组成统计时分复用帧然后发送。
- ![](/resource/29058e09-bb72-4040-a73d-4c497895e9ce.jpg)
->3. 波分复用
+ <div align="center"><img src="/resource/29058e09-bb72-4040-a73d-4c497895e9ce.jpg"/></div>
+
+1. 波分复用
  光的频分复用。由于光的频率很高，因此习惯用波长而不是频率来表示所使用的光载波。
- ![](/resource/78534153-88d1-4f83-a6e0-59064dbdc43a.png)
->4. 码分复用
+ <div align="center"><img src="/resource/78534153-88d1-4f83-a6e0-59064dbdc43a.png"/></div>
+
+1. 码分复用
  为每个用户分配m bit的码片，并且所有的码片正交，对于任意两个码片S和T有
  S*T/m=0
  为了方便，取m=8，设码片S为00011011。在拥有该码片的用户发送比特1时就发送该码片，发送比特0是就发送该码片的反码11100100。
@@ -124,64 +128,72 @@ permalink: 网络
  S^i（S的反码）*S/m=1
  利用上面的式子我们知道，当接收端使用码片S对接收到的数据进行内积运算时，结果为0的是其他用户发送的数据，结果为1的是用户发送的比特1，结果为-1的是用户发送的比特0。
  码分复用需要发送的数据量为原先的m倍。
- ![](/resource/0042edad-8e3b-4279-bd93-6906fcd1b640.jpg)
+ <div align="center"><img src="/resource/0042edad-8e3b-4279-bd93-6906fcd1b640.jpg"/></div>
 
 ## 数据链路层
 ### 三个基本问题
-> 1. 封装成帧
+1. 封装成帧
  将网络层传下来的分组添加到首部和尾部，用于标记帧的开始和结束。
- ![](/resource/3402d1c0-7020-4249-9a7f-12ea2ea6adf7.jpg)
+ <div align="center"><img src="/resource/3402d1c0-7020-4249-9a7f-12ea2ea6adf7.jpg"/></div>
+
 1. 透明传输
  透明表示实际存在的事物好像不存在一样。
  帧使用首部和尾部进行定界，如果帧的数据部分含有和首部尾部相同的内容，那么帧的开始和结束位置就会被错误的判定，需要在数据部分出现首部尾部相同的内容前面插入转义字符，如果出现转义字符，那么就在转义字符前面再加个转义字符，在接收端进行处理
  之后可以还原出原始数据。这个过程透明传输的内容是转义字符，用户察觉不到转义字符的存在。
- ![](/resource/4146e14b-56b9-433c-8e3d-74b1b325399c.jpg)
+ <div align="center"><img src="/resource/4146e14b-56b9-433c-8e3d-74b1b325399c.jpg"/></div>
+
 1. 差错检测
  目前数据链路层广泛使用了循环冗余（CRC）来检查比特差错。
 
 ### 点对点信道-PPP协议
 >互联网用户通常需要连接到某个ISP之后才能接入到互联网，PPP协议就是用户计算机和ISP进行通信时所使用的数据链路层协议。
-![](/resource/8393f520-d824-44ea-a5f3-1c1a73d735fb.jpg)
+
+<div align="center"><img src="/resource/8393f520-d824-44ea-a5f3-1c1a73d735fb.jpg"/></div>
+
 >在PPP的帧中
  - F字段为帧的定界符
  - A和C的字段暂时没有意义
  - FCS字段是使用CRC的检验序列
  - 信息部分的长度不超过1500字节
-![](/resource/0f39c274-b79c-4e83-8c7c-94fc2747832d.jpg)
+
+<div align="center"><img src="/resource/0f39c274-b79c-4e83-8c7c-94fc2747832d.jpg"/></div>
 
 ### 局域网的拓补
-![](/resource/8b15e36f-69b4-46b6-a07c-7234ac7c7927.jpg)
+<div align="center"><img src="/resource/8b15e36f-69b4-46b6-a07c-7234ac7c7927.jpg"/></div>
 
 ### 广播信道-CSMA/CD协议 *
 >在广播信道上，同一时间只能允许一台计算机发送数据。
 CSMA/CD表示载波监听多点接入/碰撞检测。
+
 - 多点接入：说明这是总线型网络，许多计算机以多点的方式连接到总线上。
 - 载波监听：每个站都必须不停的监听信道。在发送前，如果监听信道正在使用，就必须等待。
 - 碰撞检测：在发送中，如果监听到信道已有其他站正在发送数据，就表示发生了碰撞。虽然每一个站在发送数据之前都已经监听到信道为空闲，但是由于电磁波的传播时延的存在，还是可能发送碰撞。
-![](/resource/f9ed4da5-0032-41e6-991a-36d995ec28fd.png)
+<div align="center"><img src="/resource/f9ed4da5-0032-41e6-991a-36d995ec28fd.png"/></div>
 记端到端的传播时延为τ，最先发送的站点最多经过2τ就可以知道是否发生了碰撞，称2τ为`争用期`。只有经过争用期之后还没有检测到碰撞，才能肯定这次发送不会发送碰撞。
 当发生碰撞时，站点要停止发送，等待一段时间再发送。这个时间采用`截断二进制指数退避算法`来确定，从离散的整数集合{0,1,...,(2^k-1)}中随机去除一个数，记做r，然后取r倍的争用期作为重传等待时间。
 
 ### 扩展局域网 *
->1. 在物理层进行扩展
+1. 在物理层进行扩展
  - 使用集线器进行扩展。
  - 集线器的主要功能是对接收到的信号进行放大，以扩大网络的传输距离。
  - 集线器不能根据MAC地址进行转发，而是以广播的方式发送数据帧。
  - 集线器是一种共享式的传输设备，意味着同一时刻只能传输一组数据帧。
- ![](/resource/823cdab7-3779-4e3a-a951-dc2d154e0ee6.jpg)
+ <div align="center"><img src="/resource/823cdab7-3779-4e3a-a951-dc2d154e0ee6.jpg"/></div>
 1. 在链路层进行扩展
  - 最开始使用的是网桥，它接收到一个帧时，根据帧的MAC地址，查找网桥中的地址表，确定将帧转发的接口。
  - 网桥不是共享式设备，因此性能比集线器这种共享设备更高。
  - 交换机的问世很快就淘汰了网桥，它实质上是一个多接口网桥，而网桥是两接口。交换机的每个接口都能直接与一个主机或者另一个交换机相连，并且一般都工作在全双工方式。
  - 交换机具有学习能力，学习的是交换表的内容，交换表中存储着MAC地址到接口的映射。下图中，交换机有4个接口，主机A向主机B发送数据帧时，交换机把主机A到接口1的映射写入交换表中。为了发送数据帧到B，先查交换表，此时没有主机B的表项，那么主机A就发送广播帧，主机C和主机D会丢弃该项，主机B收下之后，查找交换表得到主机A映射的接口为1，因此就把帧发送主机A，同时交换机添加主机B到接口3的映射。
- ![](/resource/c9cfcd20-c901-435f-9a07-3e46830c359f.jpg)
+ <div align="center"><img src="/resource/c9cfcd20-c901-435f-9a07-3e46830c359f.jpg"/></div>
 1. 虚拟局域网
  虚拟局域网可以建立与物理位置无关的逻辑组，只有在同一个虚拟局域网中的成员才会收到链路层广播信息，例如下图中（A1,A2,A3,A4）属于一个虚拟局域网，A1发送的广播会被A2,A3,A4收到，而其他站点收不到。
- ![](/resource/a74b70ac-323a-4b31-b4d5-90569b8a944b.png)
+ <div align="center"><img src="/resource/a74b70ac-323a-4b31-b4d5-90569b8a944b.png"/></div>
 
 ### MAC层 *
 >MAC地址是6字节（48位）的地址，用于唯一标识网络适配器（网卡），一台主机拥有多少个适配器就有多少个MAC地址，例如笔记本电脑普遍存在无线网络适配器和有线网络适配器。
-![](/resource/50d38e84-238f-4081-8876-14ef6d7938b5.jpg)
+
+<div align="center"><img src="/resource/50d38e84-238f-4081-8876-14ef6d7938b5.jpg"/></div>
+
 - 类型：标记上层使用的协议。
 - 数据：长度在46~1500之间，如果太小则需要填充。
 - FCS：帧检验序列，使用的是CRC检验方法。
@@ -189,19 +201,115 @@ CSMA/CD表示载波监听多点接入/碰撞检测。
 
 ## 网络层 *
 ### 网际协议IP概述
-> - 因为网络层是整个互联网的核心，因此应当让网络层尽可能的简单。网络层向上只提供简单灵活、无连接、尽最大努力交互的数据报服务。
+- 因为网络层是整个互联网的核心，因此应当让网络层尽可能的简单。网络层向上只提供简单灵活、无连接、尽最大努力交互的数据报服务。
 - 使用IP协议，可以把异构的物理网络连接起来，使得网络层看起来好像是一个统一的网络。
-![](/resource/fe3d224c-8ffd-40f9-85b1-86ffe1393f6c.jpg)
+<div align="center"><img src="/resource/fe3d224c-8ffd-40f9-85b1-86ffe1393f6c.jpg"/></div>
 - 与IP协议配套使用的还有三个协议：
  1. 地址解析协议ARP
  1. 网际控制报文协议ICMP
  1. 网际组管理协议IGMP
- ![](/resource/163cf8b4-5f30-46c9-af00-316a71b3c890.jpg)
+ <div align="center"><img src="/resource/163cf8b4-5f30-46c9-af00-316a71b3c890.jpg"/></div>
 
 ### IP数据报格式
-![](/resource/8681db55-0873-434b-aa98-83d07e8392ae.jpg)
-> - 版本：有4（IPV4）和6（IPV6）两个值。
+<div align="center"><img src="/resource/8681db55-0873-434b-aa98-83d07e8392ae.jpg"/></div>
 
+- 版本：有4（IPV4）和6（IPV6）两个值。
+- 首部长度：占4位，因此最大值为15，值为1表示的是1个32位字的长度，也就是4字节。因为首部固定长度为20字节，因此该值最小为5，如果可选部分的长度不是4字节的整数倍，就用尾部的填充部分来填充。
+- 区分服务：用来获得更好的服务，一般情况下不使用。
+- 总长度：包括首部长度和数据部分长度。
+- 标识：在数据报长度过长从而发生分片的情况下，相同数据报的不同分片具有相同的标识符。
+- 片偏移：和标识符一起，用于发生分片的情况下。片偏移的单位为8字节。
+- 生存时间：TTL，它的存在是为了防止无法交付的数据报在互联网中不断的兜圈子。以路由器跳数为单位，当TTL为0时就丢弃数据报。
+- 协议：指出携带的数据应该上交给哪个协议进行处理，例如ICMP、TCP、UDP等。
+- 首部校验和：因为数据报每经过一个路由器，都要重新计算检验和，因此检验和不包含数据部分可以减少计算的工作量。
 
+### IP地址编址
+>IP地址编制方式经历了三个历史阶段：
+1. 分类；
+1. 子网划分；
+1. 无分类；
 
+1. 分类
+  - 由两部分组成，网络号和主机号，其中不同类别具有不同的网络号长度，并且是固定的。
+  - IP地址::={<网络号>,<主机号>}
+  <div align="center"><img src="/resource/2ddd6132-60be-4a72-9daa-3d9756191f4a.png"/></div>
 
+1. 子网划分
+  - 通过在主机号字段中拿一部分作为子网号，把两级IP地址划分为三级IP地址。注意，外部网络看不到子网的存在。
+  - IP地址::={<网络号>,<子网号>,<主机号>}
+  - 要使用子网，必须配置子网掩码。一个B类地址的默认子网掩码为255.255.0.0，如果B类地址的子网占两个比特，那么子网掩码为11111111 11111111 11000000 00000000，也就是255.255.192.0。
+1. 无分类
+  - 无分类编址CIDR消除了传统A类、B类和C类地址以及划分子网的概念，使用网络前缀和主机号来对IP地址进行编码，网络前缀的长度可以根据需要变化。
+  - IP地址::={<网络前缀号>,<主机号>}
+  - CIDR的记法上采用在IP地址后面加上网络前缀长度的方法。例如128.14.35.7/20表示前20位网络前缀。
+  - CIDR的地址掩码可以继续称为子网掩码，子网掩码首1长度为前缀的长度。
+  - 一个CIDR地址块中有很多地址，一个CIDR表示的网络就可以表示原来的很多个网络，并且在路由表中只需要一个路由就可以代替原来多个路由，减少了路由表项的数量。把这种通过使用网络前缀来减少路由表项的方式称为路由聚合，也成为构成超网。
+  - 在路由表中的项目由“网络前缀”和“下一跳地址”组成，在查找时可能会得到不只一个匹配结果，应当采用最长前缀匹配来确定应该匹配哪一个。
+
+### IP地址和MAC地址
+>网络层实现主机之间的通信，而链路层实现具体每段链路之间的通信。因此在通信过程中，IP数据报的源地址和目的地址始终不变，而MAC地址随链路的改变而改变。
+
+<div align="center"><img src="/resource/86b71296-0d1e-4a63-bcd9-54955b6b781b.jpg"/></div>
+
+### 地址解析协议ARP
+- 实现由IP地址得到的MAC地址。
+
+<div align="center"><img src="/resource/1b4d6737-d834-46ed-8f9d-6f123e29c8dd.jpg"/></div>
+
+- 每个主机都有一个ARP高速缓存，里面有本局域网上各主机和路由器的IP地址到硬件地址的映射表。
+- 如果主机A知道主机B的IP地址，但是ARP的高速缓存中没有该IP地址到MAC地址的映射，此时主机A通过广播的方式发送ARP请求分组，主机B收到该请求后会发送ARP响应分组给主机A告知其MAC地址，随后主机A向其高速缓存中写入主机B的IP地址到硬件地址的映射。
+
+<div align="center"><img src="/resource/8bc6fc2c-d198-4759-b06c-18d94d851e97.png"/></div>
+
+### 路由器的结构
+- 路由器从功能上可以划分为两大部分：路由选择和分组转发。
+- 分组转发由三部分组成：交换结构、一组输入端口和一组输出端口。
+<div align="center"><img src="/resource/3a676c54-b559-4466-9b21-eb10f1e25879.jpg"/></div>
+- 交换结构的交换网络有以下三种实现方式：
+<div align="center"><img src="/resource/7f82fd18-7f16-4125-ada6-bb6b795b4fda.png"/></div>
+
+### 路由器分组转发流程
+1. 从数据报的首部提取目的主机的IP地址D，得到目的网络地址N。（路由表项是网络号而不是IP地址，这样做大大减少了路由表条目数量）；
+1. 若N就是与此路由器直接相连的某个网络地址，则直接进行交付；
+1. 若路由表中有目的地址为D的特定主机路由，则把数据报传送给表中所指明的下一跳路由器；
+1. 若路由表中有到达网络N的路由，则把数据报传送给路由表中所指明的下一跳路由器；
+1. 若路由表中有一个默认路由，则把数据报传送给路由表中所指明的默认路由器；
+1. 报告分组转发出错。
+<div align="center"><img src="/resource/8d211911-0e62-4190-ab00-d8610adec4a0.jpg"/></div>
+
+### 路由选择协议
+- 互联网使用的路由选择协议都是自适应的，能随着网络通信量和拓补结构的变化而自适应的进行调整。
+- 互联网可以划分为许多较小的自治系统AS，一个AS可以使用一种和别的AS不同的路由选择协议。
+- 可以把路由选择协议划分为两大类：
+ 1. 内部网关协议IGP：在AS内部使用，如RIP和OSPF；
+ 1. 外部网关协议EGP：在AS之间使用，如BGP。
+<div align="center"><img alt="路由选择协议" src="/resource/e0be6970-5b0e-44a2-bc71-df4d61c42b8f.jpg"/></div>
+
+1. 内部网关协议RIP
+ - RIP是一种分布式的基础距离向量的路由选择协议。距离是指跳数，直接相连的路由器的跳数为1，跳数最多为15，超过15表示不可达。
+ - RIP按固定的时间间隔仅和相邻路由器交换自己的路由表，经过若干次交换之后，所有的路由器最终会知道到达本自治系统中任何一个网络的最短距离和下一跳的路由器地址。
+ - 距离向量算法：
+  >1. 对地址为X的相邻路由器发来的RIP报文，先修改报文中的所有项目，把下一跳字段的地址改为X，并把所有的距离字段加1；
+  >1. 对修改后的RIP报文中的每一个项目，进行一下步骤：
+      - 若原来的路由表中没有目的网络N，则把该项目添加到路由表中；
+      - 否则，若下一跳路由器的地址是X，则把收到的项目替换原来路由表中的项目；否则，若收到的项目中的距离d小于路由表中的距离，则进行更新（例如原始路由表项为Net2,5,P,新表项为Net2,4,X,则更新）否则什么也不做。
+  >1. 若3份中还没有收到相邻路由器的更新路由表，则把该相邻路由器标记为不可达，即把距离置为16。
+ - RIP协议实现简单，开销小，但是RIP能使用的最大距离为15，限制了网络的规模，并且当网络出现故障时，要经过比较长的时间才能将消息传送到所有路由器。
+1. 内部网关协议OSPF
+ - 开放最短路径优先OSPF，是为了克服RIP的缺点而开发出来的。
+ - 开放表示OSPF不受某一家厂商控制，而是公开发表的；最短路径优先表示使用了Dijkstra提出的最短路径算法SPF。
+ - OSPF具有以下特点：
+   > - 向本自治系统中的所有路由器发送信息，这种方法是洪泛法。
+   > - 发送的信息就是与相邻路由器的链路状态，链路状态包括与哪些路由器相连以及链路的度量，度量用费用、距离、时延、带宽等来表示。
+   > - 只有当链路状态发生变化时，路由器才会发送信息。
+ - 所有路由器都具有全网的拓补结构图，并且是一致的，相比于RIP，OSPF的更新过程收敛的很快。
+1. 外部网关协议BGP
+ - AS之间的路由选择很困难，主要是互联网规模很大。并且各个AS内部使用不同的路由选择协议，就无法准确定义路径的度量。并且AS之间的路由选择必须考虑有关的策略，比如有些AS不愿意让其他AS经过。
+ - BGP只能寻找一条比较好的路由，而不是最佳路由。它采用路径向量路由选择协议。
+ - 每个AS都必须配置BGP发言人，通过在两个相邻BGP发言人之间建立TCP连接来交换路由信息。
+ <div align="center"><img alt="路由选择协议" src="/resource/eb6271de-22c9-4f4b-8b31-eab1f560efac.png"/></div>
+
+ ### 网际控制报文协议ICMP
+ >ICMP是为了更有效地转发IP数据报和提高交付成功的机会。它封装在IP数据报中，但是不属于高层协议。
+
+ <div align="center"><img alt="路由选择协议" src="/resource/9b5e0fa0-9274-4219-a3a9-84fbb509c735.jpg"/></div>
