feat: add computer network part 3

--- a/source/_posts/计算机网络读书笔记.md
+++ b/source/_posts/计算机网络读书笔记.md
@@ -107,8 +107,8 @@ permalink: 网络
 
 ### 信道复用技术
 1. 频分复用、时分复用
- 频分复用的所有用户在相同的时间占用不同频率带宽资源；时分复用的所有用户在不同的时间占用相同的频率带宽资源。
- 使用这两种方式进行通信，在通信的过程中用户会一直占用一部分信道资源。但是由于计算机数据的突发性质，没必要一直用信道资源而不让出给其他用户使用，因此这两种方式对信道的利用率都不高。
+ - 频分复用的所有用户在相同的时间占用不同频率带宽资源；时分复用的所有用户在不同的时间占用相同的频率带宽资源。
+ - 使用这两种方式进行通信，在通信的过程中用户会一直占用一部分信道资源。但是由于计算机数据的突发性质，没必要一直用信道资源而不让出给其他用户使用，因此这两种方式对信道的利用率都不高。
  <div align="center"><img src="/resource/543d47a1-f0dd-414f-b23c-0c142c814854.png"/></div>
 
 1. 统计时分复用
@@ -120,14 +120,14 @@ permalink: 网络
  <div align="center"><img src="/resource/78534153-88d1-4f83-a6e0-59064dbdc43a.png"/></div>
 
 1. 码分复用
- 为每个用户分配m bit的码片，并且所有的码片正交，对于任意两个码片S和T有
- S*T/m=0
- 为了方便，取m=8，设码片S为00011011。在拥有该码片的用户发送比特1时就发送该码片，发送比特0是就发送该码片的反码11100100。
- 在计算时将00011011记做(-1-1-1+1+1-1+1+1)，可以得到
- S*S/m=1
- S^i（S的反码）*S/m=1
- 利用上面的式子我们知道，当接收端使用码片S对接收到的数据进行内积运算时，结果为0的是其他用户发送的数据，结果为1的是用户发送的比特1，结果为-1的是用户发送的比特0。
- 码分复用需要发送的数据量为原先的m倍。
+ - 为每个用户分配m bit的码片，并且所有的码片正交，对于任意两个码片$\vec S$和$\vec T$有
+ $$ {\vec S\ast \vec T \over m} = 0 $$
+ - 为了方便，取m=8，设码片S为00011011。在拥有该码片的用户发送比特1时就发送该码片，发送比特0是就发送该码片的反码11100100。
+ - 在计算时将00011011记做(-1-1-1+1+1-1+1+1)，可以得到
+ $$ {\vec S\ast \vec S\over m}=1 $$
+ $$ {\vec S\ast \vec {S^i}\over m}=-1 \mid \text{其中$\vec {S^i}$为$\vec S$的反码。}$$
+ - 利用上面的式子我们知道，当接收端使用码片S对接收到的数据进行内积运算时，结果为0的是其他用户发送的数据，结果为1的是用户发送的比特1，结果为-1的是用户发送的比特0。
+ - 码分复用需要发送的数据量为原先的m倍。
  <div align="center"><img src="/resource/0042edad-8e3b-4279-bd93-6906fcd1b640.jpg"/></div>
 
 ## 数据链路层
@@ -309,7 +309,114 @@ CSMA/CD表示载波监听多点接入/碰撞检测。
  - 每个AS都必须配置BGP发言人，通过在两个相邻BGP发言人之间建立TCP连接来交换路由信息。
  <div align="center"><img alt="路由选择协议" src="/resource/eb6271de-22c9-4f4b-8b31-eab1f560efac.png"/></div>
 
- ### 网际控制报文协议ICMP
- >ICMP是为了更有效地转发IP数据报和提高交付成功的机会。它封装在IP数据报中，但是不属于高层协议。
+### 网际控制报文协议ICMP
+>ICMP是为了更有效地转发IP数据报和提高交付成功的机会。它封装在IP数据报中，但是不属于高层协议。
 
- <div align="center"><img alt="路由选择协议" src="/resource/9b5e0fa0-9274-4219-a3a9-84fbb509c735.jpg"/></div>
+<div align="center"><img alt="路由选择协议" src="/resource/9b5e0fa0-9274-4219-a3a9-84fbb509c735.jpg"/></div>
+
+ >ICMP报文分为差错报告报文和询文报文。
+ 
+<div align="center"><img alt="路由选择协议" src="/resource/aa29cc88-7256-4399-8c7f-3cf4a6489559.png"/></div>
+
+ ### 分组网间探测PING
+- PING是ICMP的一个重要应用，主要用来测试两台主机之间的连通性。
+- PING发送的IP数据报封装的是无法交付的UDP用户数据报。
+- PING的过程：
+ 1. 源主机向目的主机发送一连串的IP数据报。第一个数据报P1的生存时间TTL设置为1，但P1到达路径上的第一个路由器R1时，R1收下它并把TTL减1，此时TTL等于0，R1就把P1丢弃，并向源主机发送一个ICMP时间超过差错报告报文；
+ 1. 源主机接着发送第二个数据报P2，并把TTL设置为2。P2先到达R1，R1收下后把TTL减1再转发给R2，R2收下后也把TTL减1，由于此时TTL为0，R2就丢弃P2，并向源主机发送一个ICMP时间超过差错报告报文；
+ 1. 不断执行这样的步骤，直到最后一个数据报刚刚到达目的主机，主机不转发数据报，也不把TTL减1。但是因为数据报封装的是无法交付的UDP，因此目的主机要向源主机发送ICMP终点不可达差错报告报文。
+ 1. 之后源主机知道了到达目的主机所经过的路由器IP地址以及到达每个路由器的往返时间。
+
+### IP多播
+>在一对多的通信中，多播不需要将分组复制多份，从而大大节约网络资源。
+
+<div align="center"><img alt="路由选择协议" src="/resource/f50a8e52-a683-444c-8e32-63c1890fe84a.jpg"/></div>
+
+### 虚拟专用网VPN
+- 由于IP地址的短缺，一个机构能申请到的IP地址远远小于本机构所拥有的主机数。并且一个机构并不需要把所有主机接入到外部的互联网中，机构内的计算机可以使用仅在本机构有效的IP地址（专用地址）。
+- 有三个专用地址块：
+ 1. 10.0.0.0~10.255.255.255
+ 1. 172.16.0.0~172.31.255.255
+ 1. 192.168.0.0~192.168.255.255
+- VPN使用的公用互联网作为本机构各专用网之间的通信媒体。专用指机构内的主机只与本机构的其他主机通信，虚拟指“好像是”，而实际上并不是，它有经过公用的互联网。
+- 下图中，场所A和B的通信部都经过互联网，如果场所A的主机要和另一个场所B的主机Y通信，IP数据报的源地址是10.1.0.1，目的地址是10.2.0.3。数据报先发送到与互联网相连的路由器R1，R1对内部数据进行加密，然后重新加上数据报的首部，源地址是路由器R1的全球地址125.1.2.3，目的地址是路由器R2的全球地址194.4.5.6。路由器R2收到数据报后将数据部分进行解密，恢复原来的数据报，此时目的地址为10.2.0.3，就交付给Y。
+
+<div align="center"><img alt="路由选择协议" src="/resource/1556770b-8c01-4681-af10-46f1df69202c.jpg"/></div>
+
+### 网络地址转换NAT
+- 专用网内部的主机使用本地IP地址又想和互联网上的主机通信时，可以使用NAT来将本地IP转换为全球IP。
+- 在以前，NAT将本地IP和全球IP一一对应，这种方式拥有n个全球IP地址的专用网内最多只可以同时拥有n台主机接入互联网。为了更有效利用全球IP地址，现在常用的NAT转换表把运输层的端口号也用上了，使得多个专用网内部的主机公用一个全球IP地址。使用端口号的NAT也叫作网络地址与端口转换NAPT。
+
+<div align="center"><img alt="路由选择协议" src="/resource/2719067e-b299-4639-9065-bed6729dbf0b.png"/></div>
+
+## 运输层*
+> 网络层只把分组发送到目的主机，但是真正通信的并不是主机而是主机中的进程。运输层提供了进程间的逻辑通信，运输层向高层用户屏蔽了下面网络层的核心细节，使应用程序看见的好像在两个运输层实体之间有一条端到端的逻辑通信信道。
+
+### UDP和TCP的特点
+- 用户数据报协议UDP是无连接的，尽最大可能交付，没有拥塞控制，面向报文（对于应用程序传下来的报文不合并也不拆分，只是添加UDP首部）。
+- 传输控制协议TCP是面向连接的，提供可靠交付，有流量控制，拥塞控制，提供全双工通信，面向字节流（把应用层传下的报文看成字节流，把字节流组织成大小不等的数据块）。
+
+### UDP首部格式
+
+<div align="center"><img alt="路由选择协议" src="/resource/d4c3a4a1-0846-46ec-9cc3-eaddfca71254.jpg"/></div>
+
+>首部字段只有8个字节，包括源端口、目的端口、长度、检验和。12字节的伪首部是为了计算校验和临时添加的。
+
+### TCP首部格式
+
+<div align="center"><img alt="路由选择协议" src="/resource/55dc4e84-573d-4c13-a765-52ed1dd251f9.png"/></div>
+
+- 序号：用于对字节流进行编号，例如序号为301，表示第一个字节的编号为301，如果携带的数据长度为100个字节，那么下一个报文段的序号应为401。
+- 确认号：期望收到的下一个报文段的序号。例如B正确收到A发送来的一个报文段，序号为501，携带的数据长度为200字节，因此B期望下一个报文段的序号为701，B发送给A的确认报文段确认号就为701。
+- 数据偏移：指的是数据部分距离报文段起始处的偏移量，实际上指的是首部长度。
+- 确认ACK：当ACK=1时确认号字段有效，否则无效。TCP规定，在连接建立后所有传送的报文段都必须把ACK置1。
+- 同步SYN：在连接建立时用来同步序号。当SYN=1，ACK=0时表示这是一个连接请求报文段。若对方同意建立连接，则响应报文中SYN=1，ACK=1。
+- 终止FIN：用来释放一个连接，当FIN=1时，表示此报文段的发送方的数据已发送完毕，并要求释放运输连接。
+- 窗口：窗口值作为接收方让发送方设置其发送窗口的依据。之所以有这个限制，是因为接收方的数据缓存空间是有限的。
+
+### TCP的三次握手
+<div align="center"><img alt="路由选择协议" src="/resource/e92d0ebc-7d46-413b-aec1-34a39602f787.png"/></div>
+
+>假设A为客户端，B为服务器端。
+1. 首先B处于LISTEN（监听）状态，等待客户的连接请求。
+1. A向B发送连接请求报文段，SYN=1，ACK=0，选择一个初始的序号x。
+1. B收到连接请求报文段，如果同意建立连接，则向A发送连接确认报文段，SYN=1，ACK=1，确认号为x+1，同时也选择一个初始的序号y。
+1. A收到B的连接确认报文段后，还要向B发出确认，确认号为y+1，序号为x+1，进入TIME-WAIT状态。
+1. B收到A的确认后，连接建立。
+
+### TCP的四次挥手
+<div align="center"><img alt="路由选择协议" src="/resource/f87afe72-c2df-4c12-ac03-9b8d581a8af8.jpg"/></div>
+
+>以下描述不讨论序号和确认号，因为序号和确认号的规则比较简单。并且不讨论ACK，因为ACK在连接建立之后都为1。
+1. A发送连接释放报文段，FIN=1；
+1. B收到之后发出确认，此时TCP属于半关闭状态，B能向A发送数据但是A不能向B发送数据。
+1. 当B要不再需要连接时，发送连接释放请求报文段，FIN=1；
+1. A收到后发出确认，此时连接释放。
+
+**TIME_WAIT**
+客户端接收到服务器端的FIN报文后进入此状态，此时并不是直接进入CLOSED状态，还需要等待一个时间计时器设置的时间2MSL。这么做有2个理由：
+1. 确保最后一个确认报文能够到达。如果B没有收到A发送来的确认报文段，那么就会重新发送连接释放请求报文段，A等待一段时间就是为了处理这种情况。
+1. 等待一段时间是为了让本连接持续时间内所产生的所有报文段都从网络中消失，使得下一个新的连接不会出现旧的连接请求报文段。
+
+### TCP滑动窗口
+<div align="center"><img alt="路由选择协议" src="/resource/a3253deb-8d21-40a1-aae4-7d178e4aa319.jpg"/></div>
+
+- 窗口是缓存一部分，用来暂时存放字节流。发送方和接收方各有一个窗口，接收方通过TCP报文段中的窗口字段告诉发送方自己的窗口大小，发送方根据这个值和其他信息设置自己窗口大小。
+- 发送窗口内的字节都允许被发送，接收窗口内的字节都允许接收。如果发送窗口左部的字节已经发送并且受到了确认，那么就将发送窗口向右滑动一定的距离，直到左部第一个字节不是已发送并且已经确认的状态；接收窗口类似，接收窗口左部字节已经发送确认并交付主机，就向右滑动接收窗口。
+- 接收窗口只会对窗口内最后一个按序到达的字节进行确认，例如接收窗口已经收到的字节为{31,32,34,35}，其中{31,32}按序到达，而{34,35}就不是，因此只对字节32进行确认。发送方得到一个字节的确认之后，就知道这个字节之前的所有字节都已经被接收。
+
+### TCP可靠传输
+- TCP使用超时重传来实现可靠传输：如果一个已经发送的报文段在超时时间内没有收到确认，那么就重传这个报文段。
+- 一个报文段从发送到接收再到确认所经过的时间称为往返时间RTT，加权平均往返时间RTTs计算如下：
+$$  RTT_s=(1-a)\ast(RTT_s)+a\ast RTT $$
+- 超过时间RTO应该略大于RTTs，TCP使用的超过时间计算如下：
+$$RTO=RTT_s+4\ast RTT_d \mid \text{其中$RTT_d$为偏差}$$
+
+### TCP流量控制
+- 流量控制是为了控制发送方发送速率，保证接收方来的及接收。
+- 接收方发送的确认报文中的窗口字段可以用来控制发送方窗口大小，从而影响发送方的发送速率。将窗口字段设置为0，则发送方不能发送速率。
+
+### TCP拥塞控制
+>如果网络出现拥塞，分组将会丢失，此时发送方会继续重传，从而导致网络拥塞程度更高。因此当出现拥塞时，应当控制发送方的速率。这一点和流量控制很像，但是出发点不同。流量控制是为了接收方来得及接收，而拥塞控制是为了降低整个网络的拥塞程度。
+
+<div align="center"><img alt="路由选择协议" src="/resource/51e2ed95-6g5b8-4ae9-8af3-65602d452a25.jpg"/></div>
