feat: add computer internet part 4

--- a/source/_posts/计算机网络读书笔记.md
+++ b/source/_posts/计算机网络读书笔记.md
@@ -419,4 +419,51 @@ $$RTO=RTT_s+4\ast RTT_d \mid \text{其中$RTT_d$为偏差}$$
 ### TCP拥塞控制
 >如果网络出现拥塞，分组将会丢失，此时发送方会继续重传，从而导致网络拥塞程度更高。因此当出现拥塞时，应当控制发送方的速率。这一点和流量控制很像，但是出发点不同。流量控制是为了接收方来得及接收，而拥塞控制是为了降低整个网络的拥塞程度。
 
-<div align="center"><img alt="路由选择协议" src="/resource/51e2ed95-6g5b8-4ae9-8af3-65602d452a25.jpg"/></div>
+<div align="center"><img src="/resource/51e2ed95-65b8-4ae9-8af3-65602d452a25.jpg"/></div>
+
+>TCP主要通过四种算法来进行拥塞控制：慢开始、拥塞避免、快重传、快恢复。发送方需要维护有一个叫做拥塞（cwnd）的状态变量。注意拥塞窗口与发送方窗口的区别，拥塞窗口只是一个状态变量，实际决定发送方能发送多少数据的是发送方窗口。
+为了便于讨论，做如下假设：
+1. 接收方有足够大的接受缓存，因此不会发生流量控制；
+1. 虽然TCP的窗口基于字节，但是这里设窗口的大小单位为报文段。
+
+<div align="center"><img src="/resource/910f613f-514f-4534-87dd-9b4699d59d31.png"/></div>
+
+1. 慢开始与拥塞避免
+ - 发送的最初执行慢开始，令cwnd=1，发送方只能发送1个报文段；当收到确认后，将cwnd加倍，因此发送方能够发送的报文段数量为：2、4、8...
+ - 注意到慢开始每个轮次都会将cwnd加倍，这样会让cwnd增长速度非常快，从而使得发送方发送的增长速度过快，网络拥塞的可能也就更高。设置一个慢开始门限ssthresh，当cwnd>=ssthresh时，进入拥塞避免，每个轮次只将cwnd加1。
+ - 如果出现了超时，则令ssthresh=cwnd/2，然后重新执行慢开始。
+1. 快重传与快恢复
+ - 在接受方，要求每次接收到报文段都应该发送对已接收到有序报文段的确认，例如已经接收到$M_1$和$M_2$，此时收到$M_4$，应当发送对$M_2$的确认。
+ - 在发送方，如果收到三个重复确认，那么可以确认下一个报文段丢失，例如收到三个$M_2$，则$M_3$丢失。此时执行快重传，立即重传下一个报文段。
+ - 在这种情况下，只是丢失个别报文段，而不是网络堵塞，因此执行快恢复，令ssthresh=cwnd/2，cwnd=ssthresh，注意到此时直接进入拥塞避免。
+
+ <div align="center"><img src="/resource/f61b5419-c94a-4df1-8d4d-aed9ae8cc6d5.png"/></div>
+
+## 应用层*
+### 域名系统DNS
+> - 把主机名解析为IP地址。
+- 被设计成分布式系统。
+
+1. 层次结构
+  >一个域名有多个层次构成，从上层从下层分别为顶级域名、二级域名、三级域名以及四级域名。所有域名都可以画成域名树。
+
+  <div align="center"><img src="/resource/c2117f61-1177-4768-bf33-cf4f950d911c.png"/></div>
+  <div align="center"><img src="/resource/a4b162e5-db2a-4a27-b213-1fe481c5a06a.png"/></div>
+
+ - 域名服务器可以分成以下四类：
+    1. 根域名服务器：解析顶级域名；
+    1. 顶级域名服务器：解析二级域名；
+    1. 权限域名服务器：解析区内域名；
+    1. 本地域名服务器：也称为默认域名服务器。可以在其中配置高速缓存。
+ - 区和域的概念不同，可以在一个域中划分多个区。图b在域abc.com中划分了两个区：abc.com和y.abc.com
+
+  <div align="center"><img src="/resource/fc0c6b2d-68c7-4de8-aaaa-97355a4f0472.jpg"/></div>
+
+ - 因此就需要两个权限域名服务器：
+
+  <div align="center"><img src="/resource/8b335d94-c1ca-42e1-ad48-bb179d28a4f1.jpg"/></div>
+
+1. 解析过程
+ - 主机向本地域名服务器解析的过程采用递归，而本地域名服务器向其他域名服务器解析可以使用递归和迭代两种方式。
+ - 迭代的方式下，本地域名服务器向一个域名服务器解析请求解析之后，结果返回到本地域名服务器，然后本地域名服务器继续向其他域名服务器请求解析；而递归方式下，结果不是直接返回的，然后继续向前请求解析，最后的结果才会返回。
+ <div align="center"><img src="/resource/e6723b94-1a33-4605-b775-f6813352d383.png"/></div>
