--- a/source/_posts/计算机网络读书笔记.md
+++ b/source/_posts/计算机网络读书笔记.md
@@ -468,3 +468,20 @@ $$RTO=RTT_s+4\ast RTT_d \mid \text{其中$RTT_d$为偏差}$$
  - 主机向本地域名服务器解析的过程采用递归，而本地域名服务器向其他域名服务器解析可以使用递归和迭代两种方式。
  - 迭代的方式下，本地域名服务器向一个域名服务器解析请求解析之后，结果返回到本地域名服务器，然后本地域名服务器继续向其他域名服务器请求解析；而递归方式下，结果不是直接返回的，然后继续向前请求解析，最后的结果才会返回。
  <div align="center">{% qnimg e6723b94-1a33-4605-b775-f6813352d383.png  %}</div>
+
+### 文件传输协议FTP
+>FTP在运输层使用TCP，并且需要建立两个并行的TCP连接：控制连接和数据连接。控制连接在整个会话期间一直保持打开，而数据连接在数据传送完毕之后就关闭。控制连接使用端口号为21，数据连接使用端口号为20。
+
+<div align="center">{% qnimg 30210b86-472d-4574-abb6-b74898cc17a4.jpg %}</div>
+
+### 远程终端协议TELNET
+- TELNET用于登录到远程主机上，并且远程主机上的输出也会返回。
+- TELNET可以适应许多计算机和操作系统的差异，例如不同操作系统的换行符的定义。
+
+### 万维网
+[HTTP]()
+
+### 电子邮件协议
+>一个电子邮件系统由3部分组成：用户代理、邮件服务器以及邮件发送协议和读取协议。其中发送协议常用SMTP，读取常用POP3和IMAP。
+
+<div align="center">{% qnimg 7b3efa99-d306-4982-8cfb-e7153c33aab4.png %}</div>
