feat: add HTTP part 1

--- a/source/_posts/计算机网络读书笔记.md
+++ b/source/_posts/计算机网络读书笔记.md
@@ -479,9 +479,74 @@ $$RTO=RTT_s+4\ast RTT_d \mid \text{其中$RTT_d$为偏差}$$
 - TELNET可以适应许多计算机和操作系统的差异，例如不同操作系统的换行符的定义。
 
 ### 万维网
-[HTTP]()
+[HTTP](/2018/03/29/HTTP/)
 
 ### 电子邮件协议
 >一个电子邮件系统由3部分组成：用户代理、邮件服务器以及邮件发送协议和读取协议。其中发送协议常用SMTP，读取常用POP3和IMAP。
 
 <div align="center">{% qnimg 7b3efa99-d306-4982-8cfb-e7153c33aab4.png %}</div>
+
+1. POP3
+POP3的特点是只要从服务器上读取了邮件，就把该邮件删除。
+1. IMAP
+IMAP协议中客户端和服务器上的邮件保持同步，如果不去手动删除邮件，那么服务器上的邮件也不会被删除。IMAP这种做法可以让用户随时随地去访问服务器上的邮件。IMAP协议也支持创建自定义的文件夹。
+1. SMTP
+SMTP只能发送ASCII码，而互联网邮件扩充MIME可以发送二进制文件。MIME并没有改动或者取代SMTP，而是增加邮件主题的结构，定义了非ASCIII码的编码规则。
+
+<div align="center">{% qnimg ed5522bb-3a60-481c-8654-43e7195a48fe.png %}</div>
+
+### 动态主机配置协议DHCP
+- DHCP提供了即插即用的联网方式，用户不再需要去手动配置IP地址等信息。
+- DHCP配置的内容不仅是IP地址，还包括子网掩码、默认路由器IP地址、域名服务器的IP地址。
+- 工作方式如下：需要IP地址的主机广播发送DHCP发现报文（将目的主机置为全1，即255.255.255.255:67，源地址设置为全0，即0.0.0.0:68，DHCP服务器收到发现报文之后，则在IP地址池中取一个地址，发送DHCP提供报文给该主机。
+
+### 点对点传输P2P
+- 把某个文件分发的所有对等集合称为一个洪流。文件的数据单元称为文件块，它的大小是固定的。一个新的对等方加入某个洪流，一开始并没有文件块，但是能够从其它对等方中逐渐地下载到一些文件块，与此同时，它也为别的对等方上传一些文件块。
+- 每个洪流都有一个基础设施，称为追踪器。当一个对等方加入洪流时，必须向追踪器登记，并周期性的通知追踪器它仍在洪流中。可以在任何时间加入和退出某个洪流。
+- 一个新的对等方加入洪流时，追踪器会随机从洪流中选择若干个对等方，并让新对等方与这些对等方建立连接，把这些对等方称为相邻对等方。接收和发送文件块都是在相邻对等方中进行的。
+- 当一个对等方需要很多文件块时，通常使用最稀有优先策略来取得文件块，也就是一个文件块在相邻对等方中副本最少，那么就优先请求这个文件块。
+- 当很多对等方向同一个对等方请求文件块时，该对等方优先选择最高速率向其发送文件块的对等方。
+- P2P是一个分布式系统，任何时候都有对等方加入或者退出。使用分布式散列表DHT，可以查找洪流中的资源和IP地址映射。
+
+### Web页面请求过程
+1. DHCP配置主机信息
+ 1. 假设主机最开始没有IP地址以及其他信息，那么就需要先使用DHCP来获取。
+ 1. 主机生成一个DHCP请求报文，并将这个报文放入具有目的端口67和源端口68的UDP报文中。
+ 1. 该报文段则被放入一个具有广播IP目的地址（255.255.255.255）和源IP地址（0.0.0.0）的IP数据报中。
+ 1. 该数据报则被放置在MAC帧中，该帧具有目的地址FF:FF:FF:FF:FF:FF，将广播到与交换机相连的所有设备。
+ 1. 连接在交换机的DHCP服务器收到广播帧之后，不断向上分解得到IP数据报、UDP报文段、DHCP请求报文，之后生成DHCP ACK报文，该报文包含以下信息：IP地址、DNS服务器的地址、默认网关路由器的IP地址和子网掩码。该报文被放入UDP报文段中，UDP报文段被放入IP数据报中，最后放入MAC帧中。
+ 1. 该帧的目的地址是请求主机的MAC地址，因为交换机具有自学习能力，之前主机发送了广播帧之后就记录了MAC地址到其转发的交换表项，因此现在交换机就可以直接知道应该向哪个接口发送该帧。
+ 1. 主机收到该帧后，不断分解得到DHCP报文。之后就配置它的IP地址、子网掩码和DNS服务器的IP地址，并在其IP转发表中安装默认网关。
+1. ARP解析MAC地址
+ 1. 主机通过浏览器生成一个TCP套接字，套接字向HTTP服务器发送HTPP请求。为了生成该套接字，主机需要知道网站的域名对应的IP地址。
+ 1. 主机生成一个DNS查询报文，该报文具有53端口，因为DNS服务器的端口号为53。
+ 1. 该DNS查询报文被放入目的地址为DNS服务器IP地址的IP数据报中。
+ 1. 该IP数据报被放入一个以太网帧中，该帧将发送到网关路由器。
+ 1. DHCP过程只知道网关路由器的IP地址，为了获取网关路由器的MAC地址，需要使用ARP协议。
+ 1. 主机生成一个包含目的地址为网关路由器IP地址的ARP查询报文，并将该ARP查询报文放入一个具有广播目的地址（FF:FF:FF:FF:FF:FF）的以太网帧中，并向交换机发送该以太网帧，交换机将该帧转发给所有的连接设备，包括网关路由器。
+ 1. 网关路由器接收到该帧后，不断向上分解得到ARP报文，发现其中的IP地址与其接口的IP地址匹配，因此就发送一个ARP回答报文，包含了它的MAC地址，发回给主机。
+1. DNS解析域名
+ 1. 知道了网关路由器的MAC地址之后，就可以继续DNS解析过程了。
+ 1. 网关路由器接收到包含DNS查询报文的以太网帧后，抽出IP数据报，并根据转发表决定IP数据报应该转发的路由器。
+ 1. 因为路由器具有内部网关协议（RIP、OSPF）和外部网关协议（BGP）这两种路由选择协议，因此路由表中已经配置网关路由器到达DNS服务器的路由表项。
+ 1. 到达DNS服务器之后，DNS服务器抽取出DNS查询报文，并在DNS数据库中查找待解析的域名。
+ 1. 找到DNS记录之后，发送DNS回答报文，将该回答报文放入UDP报文段中，然后放入IP数据报中，通过路由器反向转发回网关路由器，并经过以太网交换机到达主机。
+1. HTTP请求页面
+ 1. 有了HTTP服务器的IP地址之后，主机就能够生成TCP套接字，该套接字将用于向Web服务器发送HTTP GET报文。
+ 1. 在生成TCP套接字之前，必须先与HTTP服务器进行三次握手来建立连接。生成一个具有目的端口80的TCP SYN报文段，并向HTTP服务器发送该报文段。
+ 1. HTTP服务器收到该报文段之后，生成TCP SYNACK报文段，发回给主机。
+ 1. 连接建立之后，浏览器生成HTTP GET报文，并交付给HTPP服务器。
+ 1. HTTP服务器从TCP套接字读取HTTP GET报文，生成一个HTTP响应报文，将Web页面内容放入报文主体中，发回给主机。
+ 1. 浏览器收到HTTP响应报文后，抽取出Web页面内容，之后会进行渲染，显示Web页面。
+
+### 常用端口
+| 应用层协议 | 端口号 | 运输层协议 |
+| -- | -- | -- |
+| DNS | 53 | UDP |
+| FTP | 控制连接 21，数据连接 20 | TCP |
+| TELNET | 23 | TCP |
+| DHCP | 67 68 | UDP |
+| HTTP | 80 | TCP |
+| SMTP | 25 | TCP |
+| POP3 | 110 | TCP |
+| IMAP | 143 | TCP |
