feat: add markdown lint

--- a/source/_posts/动态连通性算法.md
+++ b/source/_posts/动态连通性算法.md
@@ -15,14 +15,18 @@ permalink: 树java
 ---
 
 ## 加权quick-union算法
+
 <div align="center">{% qnimg QQ截图20180316161228.jpg %}{% qnimg QQ截图20180316161307.jpg %}{% qnimg QQ截图20180316161143.jpg %}</div>
 
 ### 特点
-> - 对于N个触点，加权quick-union算法构造的森林中的任意节点的深度最多为lgN。
+
+- 对于N个触点，加权quick-union算法构造的森林中的任意节点的深度最多为lgN。
 - 对于加权quick-union算法和N个触点，在最坏情况下find()、connected()和union()的成本的增长数量级为logN。
+
 <!-- more-->
 
 ### 实现
+
 ```java
 package edu.princeton.cs.algs4;
 
