--- a/source/_posts/操作系统原理读书笔记.md
+++ b/source/_posts/操作系统原理读书笔记.md
@@ -10,7 +10,7 @@ tags:
 permalink: OS
 date: 2018-04-01 10:23:49
 fancybox:
-original: https://github.com/CyC2018/Interview-Notebook/blob/master/notes/%E8%AE%A1%E7%AE%97%E6%9C%BA%E6%93%8D%E4%BD%9C%E7%B3%BB%E7%BB%9F.md
+original:
 comments:
 ---
 # 一、 概述
@@ -18,37 +18,48 @@ comments:
 ## 操作系统基本特征
 
 ### 并发
+
 - 并发性是指宏观上在一段时间内能同时运行多个程序，而并行性则指同一时刻能运行多个指令。
 - 并行需要硬件支持，如多流水线或者多处理器。
 - 操作系统通过引入进程和线程，使得程序能够并发运行。
 
 <!--more-->
+
 ### 共享
+
 - 共享是指系统中的资源可以供多个并发进程共同使用。
 - 有两种共享方式：互斥共享和同时共享。
 - 互斥共享的资源称为临界资源，例如打印机等，在同一时间只允许一个进程访问，需要用同步机制来实现对临界资源的访问。
 
 ### 虚拟
+
 - 虚拟技术把一个物理实体转换为多个逻辑实体。
 - 主要有两种虚拟技术：时分复用技术和空分复用技术。例如多个进程能在同一个处理器上并发执行使用了时分复用技术，让每个进程轮流占有处理器，每次只执行一小个时间片并快速切换。
 
 ### 异步
+
 >异步指进程不是一次性执行完毕，而是走走停停，以不可知的速度向前推进。
 
 ## 操作系统基本功能
+
 ### 进程管理
+
 >进程控制、进程同步、进程通信、死锁处理、处理机调度等。
 
 ### 内存管理
+
 >内存分配、地址映射、内存保护与共享和内存扩充等功能。
 
 ### 文件管理
+
 >文件存储空间的管理、目录管理及文件读写管理和保护等。
 
 ### 设备管理
+
 >完成用户的 I/O 请求，方便用户使用各种设备，并提高设备的利用率，主要包括缓冲管理、设备分配、设备处理和虛拟设备等功能。
 
 ## 系统调用
+
 >如果一个进程在用户态需要使用内核态的功能，就进行系统调用从而陷入内核，由操作系统代为完成。
 
 <div align="center">{% qnimg tGPV0.png %}</div>
@@ -67,10 +78,12 @@ comments:
 ## 大内核和微内核
 
 ### 大内核
+
 - 大内核是将操作系统功能作为一个紧密结合的整体放到内核。
 - 由于各模块共享信息，因此有很高的性能。
 
 ### 微内核
+
 - 由于操作系统不断复杂，因此将一部分操作系统功能移出内核，从而降低内核的复杂性。移出的部分根据分层的原则划分成若干服务，相互独立。
 - 在微内核结构下，操作系统被划分成小的、定义良好的模块，只有微内核这一个模块运行在内核态，其余模块运行在用户态。
 - 因为需要频繁地在用户态和核心态之间进行切换，所以会有一定的性能损失。
@@ -80,12 +93,15 @@ comments:
 ## 中断分类
 
 ### 外中断
+
 >由 CPU 执行指令以外的事件引起，如 I/O 结束中断，表示设备输入/输出处理已经完成，处理器能够发送下一个输入/输出请求。此外还有时钟中断、控制台中断等。
 
 ### 异常
+
 >由 CPU 执行指令的内部事件引起，如非法操作码、地址越界、算术溢出等。
 
 ### 陷入
+
 >在用户程序中使用系统调用。
 
 # 进程管理
@@ -93,6 +109,7 @@ comments:
 ## 进程与线程
 
 ### 进程
+
 - 进程是资源分配的基本单位。
 - 进程控制块 (Process Control Block, PCB) 描述进程的基本信息和运行状态，所谓的创建进程和撤销进程，都是指对 PCB 的操作。
 - 下图显示了 4 个程序创建了 4 个进程，这 4 个进程可以并发地执行。
@@ -100,12 +117,14 @@ comments:
 <div align="center">{% qnimg a6ac2b08-3861-4e85-baa8-382287bfee9f.png %}</div>
 
 ### 线程
+
 - 线程是独立调度的基本单位。
 - 一个进程中可以有多个线程，它们共享进程资源。
 
 <div align="center">{% qnimg 3cd630ea-017c-488d-ad1d-732b4efeddf5.png %}</div>
 
 ### 区别
+
 - 拥有资源：进程是资源分配的基本单位，但是线程不拥有资源，线程可以访问隶属进程的资源。
 - 调度：线程是独立调度的基本单位，在同一进程中，线程的切换不会引起进程切换，从一个进程内的线程切换到另一个进程中的线程时，会引起进程切换。
 - 系统开销：由于创建或撤销进程时，系统都要为之分配或回收资源，如内存空间、I/O 设备等，所付出的开销远大于创建或撤销线程时的开销。类似地，在进行进程切换时，涉及当前执行进程 CPU 环境的保存及新调度进程 CPU 环境的设置，而线程切换时只需保存和设置少量寄存器内容，开销很小。
@@ -160,11 +179,13 @@ comments:
 ### 交互式系统中的调度
 
 #### 优先级调度
+
 - 除了可以手动赋予优先权之外，还可以把响应比作为优先权，这种调度方式叫做高响应比优先调度算法。
 - 响应比 = (等待时间 + 要求服务时间) / 要求服务时间 = 响应时间 / 要求服务时间
 - 这种调度算法主要是为了解决短作业优先调度算法长作业可能会饿死的问题，因为随着等待时间的增长，响应比也会越来越高。
 
 #### 时间片轮转
+
 - 将所有就绪进程按 FCFS 的原则排成一个队列，每次调度时，把 CPU 时间分配给队首进程，该进程可以执行一个时间片。当时间片用完时，由计时器发出时钟中断，调度程序便停止该进程的执行，并将它送往就绪队列的末尾，同时继续把 CPU 时间分配给队首的进程。
 - 时间片轮转算法的效率和时间片的大小有很大关系。因为进程切换都要保存进程的信息并且载入新进程的信息，如果时间片太小，会导致进程切换得太频繁，在进程切换上就会花过多时间。
 
@@ -176,12 +197,14 @@ comments:
 - 每个队列优先权也不同，最上面的优先权最高。因此只有上一个队列没有进程在排队，才能调度当前队列上的进程。
 
 ### 实时系统中的调度
+
 - 实时系统要求一个服务请求在一个确定时间内得到响应。
 - 分为硬实时和软实时，前者必须满足绝对的截止时间，后者可以容忍一定的超时。
 
 ## 进程同步
 
 ### 临界区
+
 - 对临界资源进行访问的那段代码称为临界区。
 - 为了互斥访问临界资源，每个进程在进入临界区之前，需要先进行检查。
 
@@ -192,15 +215,18 @@ comments:
 ```
 
 ### 同步与互斥
+
 - 同步：多个进程按一定顺序执行；
 - 互斥：多个进程在同一时刻只有一个进程能进入临界区。
 
 ### 信号量
+
 - 信号量（Semaphore）是一个整型变量，可以对其执行 down 和 up 操作，也就是常见的 P 和 V 操作。
-  -  **down**  : 如果信号量大于 0 ，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
-  -  **up** ：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
+    -  **down**  : 如果信号量大于 0 ，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
+    -  **up** ：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
 - down 和 up 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
 - 如果信号量的取值只能为 0 或者 1，那么就成为了  **互斥量（Mutex）** ，0 表示临界区已经加锁，1 表示临界区解锁。
+
 ```c
 typedef int semaphore;
 semaphore mutex = 1;
@@ -255,6 +281,7 @@ void consumer() {
 ```
 
 ### 管程
+
 - 使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不容易出错，也使得客户端代码调用更容易。
 - c 语言不支持管程，下面的示例代码使用了类 Pascal 语言来描述管程。示例代码的管程提供了 insert() 和 remove() 方法，客户端代码通过调用这两个方法来解决生产者-消费者问题。
 
@@ -274,6 +301,7 @@ monitor ProducerConsumer
     end;
 end monitor;
 ```
+
 - 管程有一个重要特性：在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程，否则其它进程永远不能使用管程。
 - 管程引入了  **条件变量**  以及相关的操作：**wait()** 和 **signal()** 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。signal() 操作用于唤醒被阻塞的进程。
 
@@ -329,6 +357,7 @@ end;
 生产者和消费者问题前面已经讨论过了。
 
 ### 读者-写者问题
+
 - 允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
 - 一个整型变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁，一个互斥量 data_mutex 用于对读写的数据加锁。
 
@@ -385,6 +414,7 @@ void philosopher(int i) {
 ```
 
 为了防止死锁的发生，可以设置两个条件：
+
 1. 必须同时拿起左右两根筷子；
 2. 只有在两个邻居都没有进餐的情况下才允许进餐。
 
@@ -451,6 +481,7 @@ void test(i) {         // 尝试拿起两把筷子
 <div align="center">{% qnimg 037c3a0b-332d-434d-a374-f343ef72c8e1.jpg %}</div>
 
 <font size=3>  **（一）管道**  </font></br>
+
 - 写进程在管道的尾端写入数据，读进程在管道的首端读出数据。管道提供了简单的流控制机制，进程试图读空管道时，在有数据写入管道前，进程将一直阻塞。同样地，管道已经满时，进程再试图写管道，在其它进程从管道中移走数据之前，写进程将一直阻塞。
 - Linux 中管道通过空文件实现。
 - 管道有三种：
@@ -473,6 +504,7 @@ void test(i) {         // 尝试拿起两把筷子
 <div align="center">{% qnimg 699b4f96-d63f-46ea-a581-2b3d95eceb6a.jpg %}</div>
 
 #### 共享内存
+
 - 操作系统建立一块共享内存，并将其映射到每个进程的地址空间上，进程就可以直接对这块共享内存进行读写。
 - 共享内存是最快的进程通信方式。
 
@@ -492,6 +524,7 @@ void test(i) {         // 尝试拿起两把筷子
 ## 死锁的处理方法
 
 ### 鸵鸟策略
+
 - 把头埋在沙子里，假装根本没发生问题。
 - 因为解决死锁问题的代价很高，因此鸵鸟策略这种不采取任务措施的方案会获得更高的性能。当发生死锁时不会对用户造成多大影响，或发生死锁的概率很低，可以采用鸵鸟策略。
 - 大多数操作系统，包括 Unix，Linux 和 Windows，处理死锁问题的办法仅仅是忽略它。
@@ -513,10 +546,10 @@ void test(i) {         // 尝试拿起两把筷子
 <div align="center">{% qnimg e1eda3d5-5ec8-4708-8e25-1a04c5e11f48.png %}</div>
 
 - 上图中，有三个进程四个资源，每个数据代表的含义如下：
-  - E向量：资源总量
-  - A向量：资源剩余量
-  - C矩阵：每个进程所拥有的资源数量，每一行都代表一个进程拥有资源的数量
-  - R矩阵：每个进程请求的资源数量
+    - E向量：资源总量
+    - A向量：资源剩余量
+    - C矩阵：每个进程所拥有的资源数量，每一行都代表一个进程拥有资源的数量
+    - R矩阵：每个进程请求的资源数量
 - 进程 P<sub>1</sub> 和 P<sub>2</sub> 所请求的资源都得不到满足，只有进程 P<sub>3</sub> 可以，让 P<sub>3</sub> 执行，之后释放 P<sub>3</sub> 拥有的资源，此时 A = (2 2 2 0)。P<sub>2</sub> 可以执行，执行后释放 P<sub>2</sub> 拥有的资源，A = (4 2 2 1) 。P<sub>1</sub> 也可以执行。所有进程都可以顺利执行，没有死锁。
 - 算法总结如下：
   每个进程最开始时都不被标记，执行过程有可能被标记。当算法结束时，任何没有被标记的进程都是死锁进程。
@@ -525,6 +558,7 @@ void test(i) {         // 尝试拿起两把筷子
   3. 如果没有这样一个进程，算法终止。
 
 **（三）死锁恢复** 
+
 - 利用抢占恢复
 - 利用回滚恢复
 - 通过杀死进程恢复
@@ -611,17 +645,20 @@ void test(i) {         // 尝试拿起两把筷子
 - 每个段都需要程序员来划分。
 
 ### 段页式
+
 - 用分段方法来分配和管理虚拟存储器。程序的地址空间按逻辑单位分成基本独立的段，而每一段有自己的段名，再把每段分成固定大小的若干页。
 - 用分页方法来分配和管理实存。即把整个主存分成与上述页大小相等的存储块，可装入作业的任何一页。
 - 程序对内存的调入或调出是按页进行的，但它又可按段实现共享和保护。
 
 ### 分页与分段区别
+
 - 对程序员的透明性：分页透明，但是分段需要程序员显示划分每个段。
 - 地址空间的维度：分页是一维地址空间，分段是二维的。
 - 大小是否可以改变：页的大小不可变，段的大小可以动态改变。
 - 出现的原因：分页主要用于实现虚拟内存，从而获得更大的地址空间；分段主要是为了使程序和数据可以被划分为逻辑上独立的地址空间并且有助于共享和保护。
 
 ## 分页系统地址映射
+
 - 内存管理单元（MMU）：管理着虚拟地址空间和物理内存的转换。
 - 页表（Page table）：页（虚拟地址空间）和页框（物理内存空间）的映射表。例如下图中，页表的第 0 个表项为 010，表示第 0 个页映射到第 2 个页框。页表项的最后一位用来标记页是否在内存中。
 
@@ -683,6 +720,7 @@ void test(i) {         // 尝试拿起两把筷子
 # 设备管理
 
 ## 磁盘调度算法
+
 - 当多个进程同时请求访问磁盘时，需要进行磁盘调度来控制对磁盘的访问。
 - 磁盘调度的主要目标是使磁盘的平均寻道时间最少。
 
