feat: optimize image and js loading speed

--- a/source/_posts/计算机网络读书笔记.md
+++ b/source/_posts/计算机网络读书笔记.md
@@ -3,13 +3,13 @@ title: 计算机网络读书笔记
 original: 
 date: 2018-3-23 21:43:25
 comments: 
-fancybox: 
 categories:
 - 面试
 tags:
 - 计算机网络
 - 互联网
 permalink: 网络
+mathjax: true
 ---
 
 ## 概述
