feat: add design pattern part 2

--- a/source/_posts/设计模式.md
+++ b/source/_posts/设计模式.md
@@ -41,6 +41,98 @@ date: 2018-04-14 17:47:47
 
 保证一个类仅有一个实例，并提供一个访问它的全局访问点。
 
+**模式结构**
+
+<div align="center">{% qnimg 微信截图_20180414223904.png alt:单例模式 %}</div>
+
+```c++
+public class Singleton 
+{
+    //4：定义一个变量来存储创建好的类实例
+    //5：因为这个变量要在静态方法中使用，所以需要加上static修饰
+    private static Singleton instance = null;
+    //1：私有化构造方法，便于在内部控制创建实例的数目
+    private Singleton()
+    {    
+    }
+    //2：定义一个方法来为客户端提供类实例
+    //3：这个方法需要定义成类方法，也就是要加static
+    public static Singleton GetInstance(){
+        //6：判断存储实例的变量是否有值
+        if(instance == null){
+          //6.1：如果没有，就创建一个类实例，并把值赋给存储类实例的变量
+          instance = new Singleton();
+        }
+        //6.2：如果有值，那就直接使用
+        return instance;
+    }
+}
+```
+
+**懒汉式单例**
+
+- 单例模式在整个应用程序的生命周期中只存在一个实例
+- 懒汉式单例就是这个单例类的这个唯一实例 new 是在第一次使用 GetInstance()时实例化的
+- 如果不调用 GetInstance() 的话，这个实例是不会存在的，即为 null
+- 形象点说呢，就是你不去动它的话，它自己是不会实例化的，所以可以称之为懒汉。
+- 前面在介绍单例模式的这几个 Demo 中都是使用的懒汉式单例
+
+```c++
+public class Singleton
+{
+    private static Singleton singleton;
+    //定义一个只读静态对象 
+    //且这个对象是在程序运行时创建的 
+    private static readonly object syncObject = new object();
+    private Singleton()
+    {}
+    public static Singleton GetInstance()
+    {
+        //第一重 singleton == null 
+        if (singleton == null)
+        {
+            lock (syncObject)
+            {
+                //第二重 singleton == null
+                if (singleton == null)
+                {
+                    singleton = new Singleton();
+                }
+            }
+        }
+        return singleton;
+    }
+}
+```
+
+**饿汉式单例**
+
+- 饿汉式单例的话，则刚好相反，
+- 其由于肚子饿了，所以到处找东西吃，人也变得主动了很多，所以根本就不需要别人来催他实例化单例类的为一实例，
+- 其自己就会主动实例化单例类的这个唯一类。
+
+```c++
+public class Singleton
+{
+    private static readonly Singleton singleton = new Singleton();
+
+    private Singleton()
+    {
+    }
+
+    public static Singleton GetInstance()
+    {
+        return singleton;
+    }
+}
+```
+
+上面的饿汉式单例类中可以看到，当整个类被加载的时候，就会自行初始化 singleton 这个静态只读变量。
+
+而非在第一次调用 GetInstance（）时再来实例化单例类的唯一实例，所以这就是一种饿汉式的单例类。
+
+在 C# 中，可以用特殊的方式实现饿汉式单例，即使用静态初始化来完成饿汉式单例模式。
+
 ## 结构型模式
 
 ### 适配器模式(Adapter)
